feat(security): 检查APIKey 配置文件加载报错的问题并修复，拆分安全属性配置类